--- a/HelloJavaFX/src/jp/mats/javafx/HelloWorld.fxml
+++ b/HelloJavaFX/src/jp/mats/javafx/HelloWorld.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.*?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jp.mats.javafx.HelloWorldController">
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Hello World!" />
+            <Button fx:id="b1" mnemonicParsing="false" onAction="#onClick" text="Hello World!" />
             <Label text="created by SceneBuilder" />
          </children>
       </VBox>
